fix no bug do spinner e overflow

--- a/assets/scss/components/atoms/loaders.scss
+++ b/assets/scss/components/atoms/loaders.scss
@@ -1,5 +1,7 @@
 .spinner {
 	position: fixed;
+	top: 0;
+	left: 0;
 	width: 100%;
 	height: 100%;
 	z-index: 9999;
@@ -17,27 +19,25 @@
 			height: 100%;
 			width: 6px;
 			display: inline-block;
-			-webkit-animation: sk-stretchdelay 1.2s infinite ease-in-out;
-			animation: sk-stretchdelay 1.2s infinite ease-in-out;
+			animation-name: sk-stretchdelay;
+			animation-duration: 1.2s;
+			animation-iteration-count: infinite;
+			animation-timing-function: ease-in-out;
 		}
 
-		.rect2 {
-			-webkit-animation-delay: -1.1s;
+		&__rect2 {
 			animation-delay: -1.1s;
 		}
 
-		.rect3 {
-			-webkit-animation-delay: -1s;
+		&__rect3 {
 			animation-delay: -1s;
 		}
 
-		.rect4 {
-			-webkit-animation-delay: -0.9s;
+		&__rect4 {
 			animation-delay: -0.9s;
 		}
 
-		.rect5 {
-			-webkit-animation-delay: -0.8s;
+		&__rect5 {
 			animation-delay: -0.8s;
 		}
 
@@ -48,35 +48,21 @@
 			}
 		}
 
-		@-webkit-keyframes sk-stretchdelay {
-			0%,
-			40%,
-			100% {
-				-webkit-transform: scaleY(0.4);
-			}
-
-			20% {
-				-webkit-transform: scaleY(1);
-			}
-		}
-
 		@keyframes sk-stretchdelay {
 			0%,
 			40%,
 			100% {
 				transform: scaleY(0.4);
-				-webkit-transform: scaleY(0.4);
 			}
 
 			20% {
 				transform: scaleY(1);
-				-webkit-transform: scaleY(1);
 			}
 		}
 	}
-}
 
-.hidden {
-	animation: fadeOut 1s;
-	animation-fill-mode: forwards;
+	&.hidden {
+		animation: fadeOut 1s;
+		animation-fill-mode: forwards;
+	}
 }
